--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
+    "motion": "^12.23.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-fast-marquee": "^1.6.5",
+    "react-icons": "^5.5.0",
     "react-responsive": "^10.0.1",
     "tailwindcss": "^4.1.11"
   },
