--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.553.0",
     "motion": "^12.23.24",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
